tests/invalid/unary_pos_class_missing_method/main.py
class A:
    pass


def main() -> None:
    a: A = A()
    _ = +a
